--- a/package.json
+++ b/package.json
@@ -1,11 +1,5 @@
-
 {
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MCROEngineering/react-native-onfido-sdk.git"
-  },
-  "homepage": "https://github.com/MCROEngineering/react-native-onfido-sdk",
-  "name": "react-native-onfido-sdk",
+  "name": "@lykkecorp/react-native-onfido-sdk",
   "version": "0.0.8",
   "description": "Onfido SDK for React Native",
   "main": "index.js",
@@ -15,7 +9,7 @@
   "keywords": [
     "react-native"
   ],
-  "author": "MCROEngineering",
+  "author": "",
   "license": "MIT",
   "peerDependencies": {
     "react-native": "^0.41.2"
