--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-native-onfido-sdk",
   "version": "0.0.8",
+  "homepage": "https://github.com/MCROEngineering/react-native-onfido-sdk",
   "description": "Onfido SDK for React Native",
   "main": "index.js",
   "scripts": {
